  - Added PlainWriteFile() to gpg.py
* Merged in lp:~michal-s/duplicity/duplicity
  - Fix azurebackend storage class import
* Merged in lp:~feraudet/duplicity/fix
  - Fix missing SWIFT_ENDPOINT_TYPE env var, bug 1519694.
* Fix bug #1520691 - Shell Code Injection in hsi backend
  - Replace use of os.popen3() with subprocess equivalent.


New in v0.7.05 (2015/09/15)
---------------------------
* Merged in lp:~aaron-whitehouse/duplicity/fix_patch_error
  - Change use of mock.patch in unit tests to accommodate the obsolete
    version of python-mock on the build server.
* Fixed Bug 1476019 S3 storage bucket not being automatically created
  with patch from abeverley
* Merged in lp:~aaron-whitehouse/duplicity/launchpad_tox_profile
  - Add tox testing profile that mimics the packages installed on the
    Launchpad build server, to reduce the likelihood of tests passing
    our test suite, but failing on the build server (e.g. because of
    the out-of-date mock version).
* Merged in lp:~aaron-whitehouse/duplicity/disable_code_tests_for_lpbuildd
  - Set RUN_CODE_TESTS to 0 for lpbuildd tox profile, reflecting its value
    on the Launchpad build server (and therefore skipping PEP8, 2to3 and
    pylint). More accurately reflects the system we are mimicking and saves
    approximately 1 minute per test run.
* Fixed Bug 1438170 duplicity crashes on resume when using gpg-agent with
  patch from Artur Bodera (abodera).  Applied the same patch to incremental
  resumes as well.
* Merged in lp:~w.baranowski/duplicity/selection_debug
  - This little patch logs debug messages concerning path selection process,
    and so allows users to debug their include/exclude configuration.
* Merged in lp:~germar/duplicity/par2removefix
  - After reorganisation in revision 981 and the fix for bug #1406173 the
    par2backend does not remove .par2 files anymore when removing
    duplicity-*.gpg files.
  - This banch adds an unfiltered_list() method which is used in